# evolution-activesync

./: .editorconfig  .gitignore  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README  README.md  TODO  TODO.list  acinclude.m4  aclocal.m4  astyle-all.sh  astyle.options  autogen.sh  build_eas-daemon.sh  config.h.in  configure.ac  deleteme  deleteme.txt  env_var_use_in_activesyncd  evo.supp  evolution-activesync.doap  gen-todo-list.sh  libeasaccount.pc.in  libeasclient.pc.in  libeasmail.pc.in  libeassync.pc.in  org.meego.activesyncd.account.gschema.xml  org.meego.activesyncd.gschema.xml  sys.supp  test_eas-daemon.sh
QtActivesyncdConfig/: ConfigWizard.cpp  ConfigWizard.h  ConfigWizard.ui  Makefile.am  QtActivesyncdConfig.pro  main.cpp  readme.txt
camel/: CMakeLists.txt  Makefile.am  camel-eas-compat.c  camel-eas-compat.h  camel-eas-folder.c  camel-eas-folder.h  camel-eas-message-info.c  camel-eas-message-info.h  camel-eas-private.h  camel-eas-provider.c  camel-eas-settings.c  camel-eas-settings.h  camel-eas-store-summary.c  camel-eas-store-summary.h  camel-eas-store.c  camel-eas-store.h  camel-eas-summary.c  camel-eas-summary.h  camel-eas-transport.c  camel-eas-transport.h  camel-eas-utils.c  camel-eas-utils.h  libcameleas.urls
check_tests/: CMakeLists.txt  Makefile.am  eas_autodiscover_tests.c  eas_cal_info_translator_test.c  eas_check_to_junit.xsl  eas_con_info_translator_test.c  eas_connection_tests.c  eas_daemon_tests.c  eas_email_info_translator_test.c  eas_folderhierarchy_tests.c  eas_gobjects_unittests.c  eas_libeascal_tests.c  eas_libeascon_tests.c  eas_libeasmail_tests.c  eas_libeassync_tests.c  eas_main_tests.c  eas_test_user.h
check_tests/TestData/Mocked_Negative_Tests/: CalendarDeleteInvalidServerId.xml  CalendarUpdateInvalidServerId.xml  EmailAttachmentInvalidFileReference.xml  EmailBodyCrash.xml  EmailBodyInvalidMimeDirectory.xml  EmailBodyInvalidServerId.xml  EmailDeleteInvalidServerId.xml  EmailFolderHierarchyInvalidSyncKey.xml  EmailGetInfoBadFolderId.xml  EmailInfoBadFolderStructure.xml  (+5 more)
collection/: CMakeLists.txt  Makefile.am  e-eas-backend-factory.c  e-eas-backend-factory.h  e-eas-backend.c  e-eas-backend.h  module-eas-backend.c
configuration/: CMakeLists.txt  Makefile.am  e-mail-config-eas-backend.c  e-mail-config-eas-backend.h  module-eas-mail-config.c
eas-daemon/: CMakeLists.txt  Makefile.am  Makefile.am.orig  build_activesyncd.sh  configure.ac
eas-daemon/data/:  org.meego.activesyncd.service.in  CMakeLists.txt  Makefile.am  accounts.cfg  org.meego.activesyncd.service.in
eas-daemon/libeas/: CMakeLists.txt  Makefile.am  Makefile.am.bak  activesyncd-accounts.schemas.in  eas-2way-sync-req.c  eas-2way-sync-req.h  eas-account-list.c  eas-account-list.h  eas-account.c  eas-account.h  eas-accounts.c  eas-accounts.h  eas-add-calendar-req.c  eas-add-calendar-req.h  eas-add-item-req.c  eas-add-item-req.h  eas-cal-info-translator.c  eas-cal-info-translator.h  eas-con-info-translator.c  eas-con-info-translator.h  eas-connection-errors.c  eas-connection-errors.h  eas-connection.c  eas-connection.h  eas-delete-email-req.c  eas-delete-email-req.h  eas-delete-req.c  eas-delete-req.h  eas-email-info-translator.c  eas-email-info-translator.h  eas-errors.c  eas-errors.h  eas-find-msg.c  eas-find-msg.h  eas-find-req.c  eas-find-req.h  eas-get-email-attachment-msg.c  eas-get-email-attachment-msg.h  eas-get-email-attachment-req.c  eas-get-email-attachment-req.h  (+58 more)
eas-daemon/src/: CMakeLists.txt  Makefile.am  activesyncd-common-defs.h  activesyncd-server.c  activesyncd-server.c.orig  eas-calendar.c  eas-calendar.h  eas-calendar.xml  eas-common.c  eas-common.h  eas-common.xml  eas-contact.c  eas-contact.h  eas-contact.xml  eas-interface-base.c  eas-interface-base.h  eas-mail.c  eas-mail.c.orig  eas-mail.h  eas-mail.xml  eas-sync.c  eas-sync.h  eas-sync.xml  eas-test.c  eas-test.h  eas-test.xml
eas-daemon/tests/: Makefile.am  activesyncd-mail-client.c  activesyncd-test-001.c
eplugin/: Makefile.am  activesync-account-setup.c  eas-account-listener.c  eas-account-listener.h  org-gnome-evolution-activesync.eplug.xml  org-gnome-evolution-activesync.error.xml  org-gnome-exchange-activesync.eplug.xml  org-gnome-exchange-activesync.error.xml
libeasaccount/: build_libeasaccount.sh  configure.ac
libeasaccount/src/: CMakeLists.txt  Makefile.am  eas-account-list.c  eas-account-list.h  eas-account.c  eas-account.h  libeasaccount.pc.in
libeasaccount/tests/: Makefile.am  Makefile_local  libeasaccount_test  libeasaccount_test.c
libeasclient/: CMakeLists.txt  Makefile.am  eas-attachment.c  eas-dbus-client.c  eas-dbus-client.h  eas-email-info.c  eas-email-info.h  eas-errors.c  eas-errors.h  eas-folder.c  eas-folder.h  eas-item-info.c  eas-item-info.h  eas-logger.c  eas-logger.h  eas-mail-errors.h  eas-marshal.c  eas-marshal.h  eas-provision-list.c  eas-provision-list.h  eas-sync-errors.h  libeasmail.c  libeasmail.h  libeassync.c  libeassync.h
libeassync/: Makefile.am  build_eas-daemon.sh  configure.ac
libeassync/src/: Makefile.am  eas-cal-info.c  eas-cal-info.h  eas-item-info.c  eas-item-info.h  eas-sync-errors.h  libeascal.c  libeascal.h  libeassync.c  libeassync.h
libevoeas/: CMakeLists.txt  Makefile.am  camel-eas-settings.c  camel-eas-settings.h
logger/: Makefile.am  eas-logger.c  eas-logger.h
meego/: Makefile.am
meego/meego-ux-settings-activesync/: ActiveSync.qml  ActiveSyncDialog.qml  Config.cpp  Config.hpp  ConfigFields.qml  ConfigModel.cpp  ConfigModel.hpp  EmailAccount.cpp  EmailAccount.hpp  Plugin.cpp  TODO  meego-ux-settings-activesync.pro  qmldir
po/: CMakeLists.txt  LINGUAS  POTFILES.in  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  hr.po  hu.po  id.po  it.po  ka.po  kk.po  lt.po  lv.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CH.po  (+1 more)
syncevolution/: ActiveSyncCalendarSource.cpp  ActiveSyncCalendarSource.h  ActiveSyncSource.cpp  ActiveSyncSource.h  ActiveSyncSourceRegister.cpp  Makefile.am  README  configure-sub.in
(+166 files in other folders)
